--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
 	"java.configuration.updateBuildConfiguration": "automatic",
 	"yaml.schemas": {
-		"https://json.schemastore.org/bukkit-plugin.json": "file:///d%3A/project/countdown/lib/src/main/resources/plugin.yml"
+		"https://json.schemastore.org/bukkit-plugin.json": "file:///d%3A/project/countdown/lib/src/main/resources/plugin.yml",
+		"https://json.schemastore.org/github-workflow.json": "file:///d%3A/project/countdown/.github/workflows/build.yml"
 	}
 }
