--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,6 @@ jobs:
         uses: ncipollo/release-action@v1
         with:
           commit: ${{ env.GITHUB_SHA }}
-          tag: "v1.0.$GITHUB_RUN_NUMBER"
+          tag: v1.0.${{ env.GITHUB_RUN_NUMBER }}
           generateReleaseNotes: true
-          artifacts: "lib/build/libs/*.jar"
+          artifacts: "lib/build/libs/countdown.jar,lib/build/libs/countdown-lib.jar"
