--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -10,7 +10,7 @@
 plugins {
     // Apply the java-library plugin for API and implementation separation.
     id 'java-library'
-    id 'com.github.johnrengelman.shadow' version '7.0.0'
+    id 'com.github.johnrengelman.shadow' version '8.1.1'
 }
 
 repositories {
@@ -27,10 +27,12 @@ dependencies {
     api 'org.apache.commons:commons-math3:3.6.1'
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
-    implementation 'com.google.guava:guava:30.1.1-jre'
-    implementation 'me.lucko:commodore:1.13'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
+    implementation 'com.google.guava:guava:32.1.1-jre'
+    implementation 'me.lucko:commodore:2.2'
+    implementation 'me.lucko:commodore-file:1.0'
 
-    compileOnly 'org.spigotmc:spigot-api:1.18.2-R0.1-SNAPSHOT'
+    compileOnly 'org.spigotmc:spigot-api:1.20-R0.1-SNAPSHOT'
 }
 
 testing {
